--- a/index_1.html
+++ b/index_1.html
@@ -343,7 +343,7 @@
           <div class="img-box">
            <img src="project/todoW (2).jpg" alt="">
            <img src="project/todoB.jpg" alt="" class="img2">
-           <img src="project/todoP.jpg" alt="" class="img2">
+           <img src="project/todoWP.jpg" alt="" class="img2">
          
           </div>
           <div class="info-box">
