--- a/index_1.html
+++ b/index_1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icons8-test-passed-16.png"  />
+    <link rel="icon" href="book.png"  />
     <title>Portfolio Book</title>
     <link rel="stylesheet" href="style.css">
     <!-- box icons -->
