--- a/index_1.html
+++ b/index_1.html
@@ -43,6 +43,7 @@
           height: 150px;
           border-radius: 50%;
           box-shadow: 2px   rgba(0, 0, 0, 0.2);
+           filter:  drop-shadow(5px 9px 6px rgba(0,0,0,0.5));    
           margin: -80px auto 10px;
       }
      
